Prevent address overflow in receiveDialog - Closes #870

--- a/src/components/receiveDialog/receiveDialog.css
+++ b/src/components/receiveDialog/receiveDialog.css
@@ -3,5 +3,5 @@
   border-radius: 2px;
   color: #000;
   padding: 16px;
-  width: 300px;
+  width: 330px;
 }
